--- a/api-service/.env.example
+++ b/api-service/.env.example
@@ -23,3 +23,6 @@ SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# CONFIG SERVERLESS URL
+SERVERLESS_URL=http://serverless:3000
